add_subdirectory(cpp)

if(WIN32 AND NOT UNIX)
  # install source files
  INSTALL(DIRECTORY .
          DESTINATION src
          FILE_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ 
          DIRECTORY_PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE 
          PATTERN ".svn" EXCLUDE
          PATTERN "*.bak" EXCLUDE
          )
ENDif()