set(SMQTUTILS_LIBRARY SmQtUtils CACHE INTERNAL "SMQTUTILS LIBRARY NAME")
set(SMQTUTILS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "SMQTUTILS INCLUDE DIRECTORY")

find_package(Qt4 COMPONENTS QtCore REQUIRED)

include(${QT_USE_FILE})

include_directories(${STATEBUILDERCPP_INCLUDE_DIR} ${QSLOG_INCLUDE_DIR} ${QT_INCLUDE_DIRS})

find_package(STATEBUILDERCPP REQUIRED)

set(SMQTUTILS_SRCS SmQtObserver.cpp)

qt4_automoc(${SMQTUTILS_SRCS})

link_directories(${QT_LIBRARY_DIRS})

add_library(${SMQTUTILS_LIBRARY} STATIC ${SMQTUTILS_SRCS})

target_link_libraries(${SMQTUTILS_LIBRARY} ${QSLOG_LIBRARY})